--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview --host"
   },
   "dependencies": {
+    "qrcode.vue": "^3.3.2",
     "vue": "^3.2.6",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.11",
