--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "quiz",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite --host",
+    "start": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview --host"
   },
   "dependencies": {
     "qrcode.vue": "^3.3.2",
+    "socket.io-client": "^4.2.0",
     "vue": "^3.2.6",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
     "autoprefixer": "^10.3.4",
