--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.3.2",
     "vite": "^2.5.10",
     "vite-plugin-pages": "^0.18.0",
+    "vite-plugin-radar": "^0.2.0",
     "vite-plugin-svg-icons": "^1.0.4",
     "vue-tsc": "^0.2.3"
   }
